<resources>
    <string name="app_name" translatable="false">Tip Calculator</string>
    <string name="button_clear">Clear</string>
    <string name="button_calculate">Calculate</string>
    <string name="total_amount_view">Total amount:</string>
    <string name="tax_amount_view">Tax amount:</string>
    <string name="button_zero">0%</string>
    <string name="button_five">5%</string>
    <string name="button_ten">10%</string>
    <string name="button_twenty">20%</string>
    <string name="amount_tip">Tip amount:</string>
    <string name="grand_total_amount">Grand total:</string>
    <string name="amount_zero">0.00</string>
</resources>