<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ebertandrew_hw3.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_margin="4dp"
        android:gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/app_name"
        android:textColor="@android:color/background_dark"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/totalAmountView"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/total_amount_view"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/totalAmountValue"
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:ems="10"
                android:gravity="end"
                android:inputType="number|numberDecimal|numberSigned"
                android:padding="4dp"
                android:hint="@string/amount_zero"
                android:textSize="24sp"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/taxAmountView"
                android:layout_width="0dp"
                android:layout_height="85dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/tax_amount_view"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/taxAmountValue"
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/amount_zero"
                android:gravity="end"
                android:inputType="number|numberDecimal|numberSigned"
                android:padding="4dp"
                android:textSize="24sp"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonZero"
                    android:layout_width="71dp"
                    android:layout_height="63dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:padding="4dp"
                    android:text="@string/button_zero"
                    android:textSize="24sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButtonFive"
                    android:layout_width="wrap_content"
                    android:layout_height="59dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="@string/button_five"
                    android:textSize="24sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButtonTen"
                    android:layout_width="wrap_content"
                    android:layout_height="59dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="@string/button_ten"
                    android:textSize="24sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButtonTwenty"
                    android:layout_width="wrap_content"
                    android:layout_height="61dp"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="@string/button_twenty"
                    android:textSize="24sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="254dp">

            <Button
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_clear"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:onClick="clearClicked"/>

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/button_calculate"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:onClick="calculateClicked" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tipAmount"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/amount_tip"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tipAmountValue"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:gravity="end"
                android:padding="4dp"
                android:text="@string/amount_zero"
                android:textColor="@android:color/black"
                android:textSize="24sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/grandTotal"
                android:layout_width="0dp"
                android:layout_height="63dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/grand_total_amount"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/grandTotalValue"
                android:layout_width="0dp"
                android:layout_height="66dp"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:gravity="end"
                android:padding="4dp"
                android:text="@string/amount_zero"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>

</LinearLayout>